# model-class-toolkit

./: .gitignore  LICENSE  pyproject.toml  readme.md
model_decorators/: __init__.py  equals.py  model_class.py  object_representation.py  property_names.py
model_decorators/argument_validation/: arg_inspection.py  decorators.py  verifications.py
test/model_decorators/: test_auto_eq.py  test_equals.py  test_model_class.py  test_object_representation.py
test/model_decorators/argument_validation/: test_expected_types.py  test_expected_types_decorator.py  test_required_args.py
